- implement more functions with rpm-4.9

Version 0.24 - 09 November 2011

- add rpm-4.6 support (pixel, 2009-01-20)
- add rpm-4.8 support (Dexter Morgan, 2011-02)
- add rpm-4.9 support (tv, 2011-08)
- drop support for rpm-4.4.x (spaghetti...)